--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FinesseConnector",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Tightly integration of Сontact Сenter operator`s workstation and Finesse web-application",
   "main": "main.js",
   "repository": {
@@ -14,8 +14,8 @@
       "category": "public.app-category.business"
     },
     "asarUnpack": [
-        "config/config.json",
-        "cert/*"
+      "config/config.json",
+      "cert/*"
     ]
   },
   "scripts": {
@@ -35,11 +35,14 @@
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "electron": "^2.0.0",
+    "electron": "^3.0.9",
     "electron-builder": "^20.26.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "body-parser-xml": "^1.1.0",
     "express": "^4.16.3",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "xmlserializer": "^0.6.1"
   }
 }
