--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,15 @@
 {
-    "httpPort__": 9998,
+    "httpPort": 9998,
     "httpsPort": 8443,
     "longpollingTimeout": 60000,
-    "clickToCallCommandTtl": 3000
+    "clickToCallCommandTtl": 3000,
+
+    "logging": {
+        "fileName": "./logs/finesseConnector.log",
+        "logLevel": "info",
+        "size": "30M",
+        "interval": "1d",
+        "maxSize": "300M",
+        "morganFormat": ":remote-addr - :remote-user [:date[clf]] \":method :url\" [:id] Referrer=\":referrer\" Origin=\":origin\" :status :response-time ms - :res[content-length]"
+    }
 }
