--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
       "category": "public.app-category.business"
     },
     "asarUnpack": [
-        "config/config.json",
-        "cert/*"
+      "config/config.json",
+      "cert/*"
     ]
   },
   "scripts": {
@@ -39,7 +39,12 @@
     "electron-builder": "^20.26.1"
   },
   "dependencies": {
+    "electron-log": "^2.2.17",
     "express": "^4.16.3",
-    "nconf": "^0.10.0"
+    "moment": "^2.22.2",
+    "morgan": "^1.9.1",
+    "nconf": "^0.10.0",
+    "node-uuid": "^1.4.8",
+    "rotating-file-stream": "^1.3.9"
   }
 }
