--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FinesseConnector",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Tightly integration of Сontact Сenter operator`s workstation and Finesse web-application",
   "main": "main.js",
   "repository": {
@@ -35,7 +35,7 @@
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "electron": "^3.0.9",
+    "electron": "^3.0.11",
     "electron-builder": "^20.26.1"
   },
   "dependencies": {
@@ -46,7 +46,7 @@
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "nconf": "^0.10.0",
-    "node-uuid": "^1.4.8",
-    "rotating-file-stream": "^1.3.9"
+    "rotating-file-stream": "^1.3.9",
+    "uuid": "^3.3.2"
   }
 }
